--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,22 +1,29 @@
-name: dotnet package
+steps:
+- uses: actions/checkout@v2
 
-on: [push]
+- name: 'Print manual run reason'
+  if: ${{ github.event_name == 'workflow_dispatch' }}
+  run: |
+    echo 'Reason: ${{ github.event.inputs.reason }}'
 
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet-version: ['3.0', '3.1.x', '5.0.x' ]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-        uses: actions/setup-dotnet@v1.7.2
-        with:
-          dotnet-version: ${{ matrix.dotnet-version }}
-      - name: Install dependencies
+- name: .NET code metrics
+  id: dotnet-code-metrics
+  uses: dotnet/samples/github-actions/DotNet.GitHubAction@main
+  env:
+    GREETINGS: 'Hello, .NET developers!' # ${{ secrets.GITHUB_TOKEN }}
+  with:
+    owner: ${{ github.repository_owner }}
+    name: ${{ github.repository }}
+    branch: ${{ github.ref }}
+    dir: ${{ './github-actions/DotNet.GitHubAction' }}
+  
+- name: Create pull request
+  uses: peter-evans/create-pull-request@v3.4.1
+  if: ${{ steps.dotnet-code-metrics.outputs.updated-metrics }} == 'true'
+  with:
+    title: '${{ steps.dotnet-code-metrics.outputs.summary-title }}'
+    body: '${{ steps.dotnet-code-metrics.outputs.summary-details }}'
+    commit-message: '.NET code metrics, automated pull request.'
         run: dotnet restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
