--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,22 +1,27 @@
-steps:
-- uses: actions/checkout@v2
+name: dotnet package
 
-- name: 'Print manual run reason'
-  if: ${{ github.event_name == 'workflow_dispatch' }}
-  run: |
-    echo 'Reason: ${{ github.event.inputs.reason }}'
+on: [push]
 
-- name: .NET code metrics
-  id: dotnet-code-metrics
-  uses: dotnet/samples/github-actions/DotNet.GitHubAction@main
-  env:
-    GREETINGS: 'Hello, .NET developers!' # ${{ secrets.GITHUB_TOKEN }}
-  with:
-    owner: ${{ github.repository_owner }}
-    name: ${{ github.repository }}
-    branch: ${{ github.ref }}
-    dir: ${{ './github-actions/DotNet.GitHubAction' }}
-  
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: ['3.0', '3.1.x', '5.0.x' ]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal
 - name: Create pull request
   uses: peter-evans/create-pull-request@v3.4.1
   if: ${{ steps.dotnet-code-metrics.outputs.updated-metrics }} == 'true'
