--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,37 +1,22 @@
+name: dotnet package
+
+on: [push]
+
 jobs:
   build:
- 
-    runs-on: ubuntu-latest
- 
-    steps:
-    - uses: actions/checkout@v2
- 
-    - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v1.7.2
-      with:
-        dotnet-version: 5.0.x
- 
-    - name: Restore
-      run: dotnet restore
- 
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
- 
-    - name: Test
-      run: dotnet test --no-restore
 
-        run: dotnet restore
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-      - name: Test
-        run: dotnet test --no-restore --verbosity normal
-- name: Create pull request
-  uses: peter-evans/create-pull-request@v3.4.1
-  if: ${{ steps.dotnet-code-metrics.outputs.updated-metrics }} == 'true'
-  with:
-    title: '${{ steps.dotnet-code-metrics.outputs.summary-title }}'
-    body: '${{ steps.dotnet-code-metrics.outputs.summary-details }}'
-    commit-message: '.NET code metrics, automated pull request.'
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: ['3.0', '3.1.x', '5.0.x' ]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+      - name: Install dependencies
         run: dotnet restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
